v12/fixtures/ast/errors/ufcs_overload_ambiguity/source.able
struct Point {
  x: i32
}
fn tag(p: Point, values: Array i32) -> i32 {
  1;
}
fn tag(p: Point, values: Array String) -> i32 {
  2;
}
p := Point { x: 0 };
p.tag([]);
